--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,9 @@
   --hover-beige: #ddd9ce;
   
   /* Fun accent colors - used sparingly */
-  --accent-blue: #4a90e2;
-  --accent-red: #e85d4a;
-  --accent-yellow: #f4c430;
+  --accent-blue: #1c7ff0;
+  --accent-red: #f14832;
+  --accent-yellow: #fdc724;
 }
 
 * {
@@ -42,12 +42,24 @@ body {
   font-weight: 300;
 }
 
-.container {
+.container-method {
   max-width: 1100px;
   margin: 0 auto;
   padding: 32px;
 }
-
+.container-method h3{
+  font-size: 18px;
+  font-weight: 400;
+}
+.container-method p{
+  font-size: 16px;
+  font-weight: 200;
+}
+.container-method ul {
+  font-size: 16px;
+  font-weight: 200;
+  
+}
 /* Header */
 .site-header {
   position: sticky;
@@ -376,7 +388,7 @@ body {
   font-weight: 600;
   color: var(--text-primary);
   padding: 22px 32px;
-  font-size: 13px;
+  font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 1.8px;
   border-bottom: 1.5px solid var(--border-black);
@@ -423,14 +435,17 @@ body {
 
 .stats li:nth-child(1) strong {
   color: var(--accent-blue);
+  font-weight: 400;
 }
 
 .stats li:nth-child(2) strong {
   color: var(--accent-red);
+  font-weight: 400;
 }
 
 .stats li:nth-child(3) strong {
   color: var(--accent-yellow);
+  font-weight: 400;
 }
 
 .stats li span {
@@ -454,7 +469,7 @@ body {
   background: var(--bg-1);
   padding: 32px;
   border-radius: 16px;
-  border: 1.5px solid var(--border-black);
+  border: 1.0px solid var(--border-black);
   position: relative;
 }
 
@@ -489,10 +504,11 @@ body {
 
 .section-title {
   font-size: 36px;
-  font-weight: 600;
+  font-weight: 800;
   margin-bottom: 40px;
   color: var(--text-primary);
   letter-spacing: -0.8px;
+  font-family: "Merriweather"; 
 }
 
 .features-grid {
@@ -505,8 +521,8 @@ body {
   background: var(--card-bg);
   padding: 32px;
   border-radius: 16px;
-  border: 1.5px solid var(--border-black);
-  transition: all 0.2s;
+  border: 1.0px solid var(--border-black);
+  transition: all 0.3s;
   position: relative;
 }
 
@@ -523,19 +539,19 @@ body {
 }
 
 .features-grid article:hover {
-  transform: translateY(-3px);
+  transform: translateY(-10px);
 }
 
 .features-grid article:nth-child(1):hover {
-  box-shadow: 0 7px 0 var(--accent-blue);
+  box-shadow: 0 12px 0 var(--accent-blue);
 }
 
 .features-grid article:nth-child(2):hover {
-  box-shadow: 0 7px 0 var(--accent-red);
+  box-shadow: 0 12px 0 var(--accent-red);
 }
 
 .features-grid article:nth-child(3):hover {
-  box-shadow: 0 7px 0 var(--accent-yellow);
+  box-shadow: 0 12px 0 var(--accent-yellow);
 }
 
 .features-grid article h3 {
